<resources>
    <string name="app_name">Order_Menu</string>
    <string-array name="meal_options">
        <item>主餐</item>
        <item>副餐</item>
        <item>飲料</item>
    </string-array>
    <string-array name="main_meals">
        <item>牛肉漢堡</item>
        <item>豬肉漢堡</item>
        <item>炸雞漢堡</item>
        <item>炸魚漢堡</item>
    </string-array>
    <string-array name="side_meals">
        <item>薯條</item>
        <item>沙拉</item>
        <item>玉米濃湯</item>
        <item>蘋果派</item>
    </string-array>
    <string-array name="drinks">
        <item>可樂</item>
        <item>雪碧</item>
        <item>冰紅茶</item>
    </string-array>
    <string name="text_main_food">未選擇</string>
    <string name="text_side_food">未選擇</string>
    <string name="text_drink">未選擇</string>
    <string name="label_main_food">主餐</string>
    <string name="label_side_food">副餐</string>
    <string name="label_drink">飲料</string>

</resources>